--- a/conceptoss.html
+++ b/conceptoss.html
@@ -57,8 +57,14 @@
      size: 200px;	  
  }
  footer{
-   background-color: #252932;
+   background-color:#252932 ;
    size: 200px;
+   font-family:'Source Code Pro', monospace ;
+   color: white;
+   border-color: black;
+   border: 30px;
+   border-radius: 15px;
+   
  }
  
  .playy{
@@ -443,6 +449,9 @@ El poder de la mente subconsciente. de Joseph Murphy enseña que la manera habit
 En el libro de Joseph Murphy se plantean preguntas como ¿Por qué un hombre puede tener salud, prosperidad, felicidad, dinero y otro no conseguir ninguna de estas?
 
 Incluso bajo las mismas circunstancias, con los mismo estudios, en la misma ciudad y la misma industria, el libro revela el poder del pensamiento y responde a la pregunta: ¿Existe una respuesta a estas interrogantes en las operaciones mente consciente y su mente subconsciente? Indudablemente que sí.</p></center></div>
-
+<footer>
+  <center><p>este sitio fue creado por: Jacqueline Ocampo</p>
+  <p>toda copia sin autorizacion queda estrictamente prohibida</p></center>
+</footer>
 </body>
 </html>
