--- a/emocioness.html
+++ b/emocioness.html
@@ -56,8 +56,14 @@
      size: 200px;	  
  }
  footer{
-   background-color: #252932;
+   background-color:#252932 ;
    size: 200px;
+   font-family:'Source Code Pro', monospace ;
+   color: white;
+   border-color: black;
+   border: 30px;
+   border-radius: 15px;
+   
  }
  
  .playy{
@@ -182,6 +188,9 @@ border-radius: 15px;}
 <p>En cambio, la culpa se caracteriza por un resultado negativo que se atribuye a causas que podríamos haber controlado si nos hubiéramos esforzado y la vergüenza está asociada a resultados negativos causados por procesos que se podrían haber controlado si hubiéramos tenido mayor capacidad.</p></center></div>
 <div class="p1"><center><p>He aqui, un video con ejemplos de lo anteriormente visto:</p></center></div>
 <center><iframe width="560" height="315" src="https://www.youtube.com/embed/w6HBsGJ3fnw"title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe></iframe></center>
-
+<footer>
+  <center><p>este sitio fue creado por: Jacqueline Ocampo</p>
+  <p>toda copia sin autorizacion queda estrictamente prohibida</p></center>
+</footer>
 </body>
 </html>
