--- a/inicioo.html
+++ b/inicioo.html
@@ -51,18 +51,26 @@
  }
 
  footer{
-   background-color: #252932;
+   background-color:#252932 ;
    size: 200px;
+   font-family:'Source Code Pro', monospace ;
+   color: white;
+   border-color: black;
+   border: 30px;
+   border-radius: 15px;
+   
  }
  .playy{
   font-family: 'Source Code Pro', monospace;
 background-color: white;
 margin-right: 1400px;
-border-radius: 15px;}
-  a{ color: black;
-   text-decoration: none;
-   
- }
+border-radius: 15px;
+}
+a{
+  color: black;
+  text-decoration: none;
+}
+
 
 
 </style>
@@ -210,6 +218,9 @@ border-radius: 15px;}
       a tu subconsciente los que afectan tu vida. No los pensamientos 
        <br>
       superficiales de aprender algo y repetirlo de memoria.</center></p></div>
-     
+     <footer>
+       <center><p>este sitio fue creado por: Jacqueline Ocampo</p>
+       <p>toda copia sin autorizacion queda estrictamente prohibida</p></center>
+     </footer>
     </body>
 </html>
