--- a/emocioness.html
+++ b/emocioness.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <link href="C:\Users\OcampoBenzel\Desktop\web\stilo.css"
     rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
@@ -13,184 +13,165 @@
 		<link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
 		<link rel="javascript" href="C:\Users\OcampoBenzel\Desktop\web\music.js">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@900&display=swap" rel="stylesheet">
     <style>
 			@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
       @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@900&display=swap');
       .p1{
-  color: white;
-  
-  box-shadow: gray;
-  background-color: #252932;
-  padding:15px;
-  border:3px black;
-  margin-top:40px;
-  margin-bottom:40px;
-  text-align:center; 
-  font-size:30px;
-  border-radius:10px;
-  margin-right: 500px;
-  margin-left: 500px;
- }
-.p2{color: white;
-  background-color: #252932;
-  font-family: 'Caveat', cursive;
-  font-size: 30px;
-  box-shadow: gray;
-  background-color: #252932;
-  padding:15px;
-  border:3px black;
-  margin-top:40px;
-  margin-bottom:40px;
-  text-align:center; 
-  border-radius:10px;
-  margin-right: 500px;
-  margin-left: 500px;
- }
-.icono{ position: relative;
+       color: white;
+       box-shadow: gray;
+       background-color: #252932;
+       padding:15px;
+       border:3px black;
+       margin-top:40px;
+       margin-bottom:40px;
+       text-align:center; 
+       font-size:30px;
+       border-radius:10px;
+       margin-right: 500px;
+       margin-left: 500px;
+      }
+      .p2{color: white;
+       background-color: #252932;
+       font-family: 'Caveat', cursive;
+       font-size: 30px;
+       box-shadow: gray;
+       background-color: #252932;
+       padding:15px;
+       border:3px black;
+       margin-top:40px;
+       margin-bottom:40px;
+       text-align:center; 
+       border-radius:10px;
+       margin-right: 500px;
+       margin-left: 500px;
+      }
+      .icono{ position: relative;
        top: -150px;
        left: 300px;
-     height: 100px;
-     width: 100px;
-     size: 200px;	  
- }
- footer{
-   background-color:#252932 ;
-   size: 200px;
-   font-family:'Source Code Pro', monospace ;
-   color: white;
-   border-color: black;
-   border: 30px;
-   border-radius: 15px;
-   
- }
- 
- .playy{
-  font-family: 'Source Code Pro', monospace;
-background-color: white;
-margin-right: 1400px;
-border-radius: 15px;}
-  a{ color: black;
-   text-decoration: none;
-   
- }
-
-  
-
-</style>
-</head>
-<body>
-  <header>
-    <div class="wrapper">
-      <div class="logo"><p><img src="C:\Users\OcampoBenzel\Desktop\web\icon.ico" align="left"> El poder del pensamiento</p></div>
-    
-   <center><nav>
-      <a href="C:\Users\OcampoBenzel\Desktop\web\inicioo.html">Inicio</a>
-      <a href="C:\Users\OcampoBenzel\Desktop\web\conceptoss.html">conceptos</a>
-    
-    </nav></center>
-   </div>
-  </header>
-  <audio id="audio" preload="auto" tabindex="0" controls="" >
-    <source src="C:\Users\OcampoBenzel\Desktop\web\Je te laisserai des mots(MP3_320K).mp3">
-     tu navegador no soporta audio html 5 
-  </audio>
-  <div class="playy"><ul id="playlist">
-    <li class="active">
+       height: 100px;
+       width: 100px;
+       size: 200px;	  
+      }
+      footer{
+       background-color:#252932 ;
+       size: 200px;
+       font-family:'Source Code Pro', monospace ;
+       color: white;
+       border-color: black;
+       border: 30px;
+       border-radius: 15px;
+      }
+      .playy{
+       font-family: 'Source Code Pro', monospace;
+       background-color: white;
+       margin-right: 1400px;
+       border-radius: 15px;
+      }
+      a{ color: black;
+       text-decoration: none;
+      } 
+    </style>
+  </head>
+  <body>
+    <header>
+      <div class="wrapper">
+       <div class="logo"><p><img src="C:\Users\OcampoBenzel\Desktop\web\icon.ico" align="left"> El poder del pensamiento</p></div>
+       <center><nav>
+       <a href="C:\Users\OcampoBenzel\Desktop\web\inicioo.html">Inicio</a>
+       <a href="C:\Users\OcampoBenzel\Desktop\web\conceptoss.html">conceptos</a>
+       </nav></center>
+      </div>
+    </header>
+    <audio id="audio" preload="auto" tabindex="0" controls="" >
+     <source src="C:\Users\OcampoBenzel\Desktop\web\Je te laisserai des mots(MP3_320K).mp3">
+      tu navegador no soporta audio html 5 
+    </audio>
+    <div class="playy"><ul id="playlist">
+     <li class="active">
        <a href="C:\Users\OcampoBenzel\Desktop\web\Je te laisserai des mots(MP3_320K).mp3">
          Je te lasserai des mots - Patrick Watson
        </a>
-    </li>
-    <li>
+      </li>
+      <li>
         <a href="C:\Users\OcampoBenzel\Desktop\web\To Build A Home - The Cinematic Orchestra ☾ Sub. Español(MP3_320K).mp3">
             To build a home - The cinematic orchestra
         </a>
-    </li>
-    <li>
+      </li>
+      <li>
         <a href="C:\Users\OcampoBenzel\Desktop\web\anchor - novo amor lyrics(MP3_320K).mp3">
             Anchor - Novo Amor
         </a>
-    </li>
-    <li>
+      </li>
+      <li>
         <a href="C:\Users\OcampoBenzel\Desktop\web\Harry Styles - Fine Line (Official Audio)(MP3_320K).mp3">
             Fine line - Harry Styles
         </a>
-    </li>
-    <li>
+      </li>
+      <li>
         <a href="C:\Users\OcampoBenzel\Desktop\web\Kodaline - All I want (Lyrics _ Letra)(MP3_320K).mp3">
             All i want - Kodaline
         </a>
-    </li>
-    <li>
-      <a href="C:\Users\OcampoBenzel\Desktop\web\Grace Vanderwaal - Today And Tomorrow (Lyrics)(MP3_320K).mp3">
-         Today and tomorrow - Grace vanderwaal
-      </a>
-  </li>
-  <li>
-     <a href="C:\Users\OcampoBenzel\Desktop\web\Beverly(MP3_320K).mp3">
-      Beverly - Benjamin Walfisch
-     </a>
-  </li>
-  <li>
-    <a href="C:\Users\OcampoBenzel\Desktop\web\Fix you • Coldplay _ Letra en español _ inglés(MP3_320K).mp3">
-      Fix you - Coldplay
-    </a>
-  </li>
-  <li>
-    <a href="C:\Users\OcampoBenzel\Desktop\web\José González - Stay Alive(MP3_320K).mp3">
-      Stay alive - Jose Gonzalez
-    </a>
-  </li>
-  <li>
-    <a href="C:\Users\OcampoBenzel\Desktop\web\The Blue Umbrella (High Quality Musical Soundtrack) PIXAR(MP3_320K).mp3">
-     The blue Umbrella - Pixar
-    </a>
-  </li>
-</ul></div>
-<script type="text/javascript" src="C:\Users\OcampoBenzel\Desktop\web\music.js"></script>
-<script type="text/javascript" src="music.js"></script>
-  <div class="p1"><center><p>Saber que nuestro pensamiento genera emociones y conocer sus mecanismos hace que tengamos una herramienta muy poderosa para poder manejarlas. Las emociones no tienen una explicación sencilla, todos percibimos el mundo a través de un filtro formado por nuestros sentidos y nuestras interpretaciones.</p>
-  <p>El proceso cognitivo es una suma de mecanismos que utilizamos los seres humanos para incorporar conocimientos. La memoria, la inteligencia, el pensamiento, la atención o el lenguaje forman parte de este proceso.</p>
-  <p>Emociones y proceso cognitivo están íntimamente ligados en una doble dirección ya que un estado emocional negativo puede influir en el proceso cognitivo y al revés, una errónea interpretación de una situación puede acarrear emociones negativas.</p>
-  <p>Imaginemos que alguien nos mira con el ceño fruncido. Podemos pensar que esa persona tiene algo contra nosotros e interpretar la mirada como algo hostil cuando puede que esté enfadada por algo totalmente ajeno que nada tiene que ver con nosotros. Hemos observado un suceso, hemos procesado e interpretado la información y hemos llegado a una conclusión. El estado emocional previo a la aparición de esta situación hace que pensemos y la interpretemos de determinada manera y también la conclusión a la que llegamos genera en nosotros una emoción que varía en función de lo que hemos interpretado.</p>
-  <ul>
-
-    <li>Tiene algo contra mí, quiere hacerme daño y es más fuerte que yo. La emoción que generan nuestros pensamientos es el miedo.</li>
-
-
-    <li>Tiene algo contra mí, quiere hacerme daño pero soy más alto y fuerte. La emoción que generan nuestros pensamientos es la hostilidad.</li>
-
-
-    <li>No sé por qué me mira de esa manera, parece enfadado conmigo pero voy a esperar a ver qué pasa. Generamos cierta preocupación y nos ponemos en guardia aunque sin alarmarnos demasiado.</li>
-
-
-    <li>Parece enfadado pero como no le conozco de nada es probable que no sea conmigo, a lo mejor está así siempre. En este caso la emoción generada es más bien de curiosidad.</li>
-
-</ul>
-  <p>Con este ejemplo se puede ver cómo el mismo suceso puede dar lugar a emociones muy diferentes según nuestro pensamiento. Es importante pensar de manera lógica y realista y cuestionarnos en muchas ocasiones las interpretaciones que hacemos, para lograr tener pensamientos constructivos y libres de errores.</p></center></div>
-  <div class="p1"><center><p>La doble relación entre proceso cognitivo y emoción se hace aún más fuerte cuando el estado emocional es más intenso. Una persona que se pone muy nerviosa en determinada situación, puede llegar a bloquearse a nivel cognitivo. De manera inversa, interpretar una situación de manera excepcionalmente amenazante puede hacer que la persona sufra un estado grave de ansiedad.</p>
-  <p>Cuando hablamos de trastornos emocionales como los trastornos de ansiedad o las depresiones dicha relación cognición-emoción se hace aún más estrecha. Las personas con problemas de ansiedad presentan más sesgos cognitivos, es decir, interpretan las situaciones de manera más centrada en la amenaza que las personas sin estos problemas. Algo similar se observa en el caso de las emociones. Algunas personas cuando sufren una pérdida importante, especialmente las personas propensas a la depresión, tienden a interpretar los hechos negativos en términos de:</p>
-  <ul>
-
-    <li>Causalidad de tipo interna, es decir, la culpa la tengo yo.</li>
-
-
-    <li>Global, independiente de la situación.</li>
-
-
-    <li>Estable, que se mantiene a lo largo del tiempo.</li>
-
-</ul>
-<p>Una frase que puede resumir esta situación es por ejemplo: “Ha sido por mi culpa, como sucede con todo desde siempre”.
-</p></center></div>
-<div class="p1"><center><p>Hay otros problemas emocionales derivados de lo que se llama proceso o sesgo de tipo atribucional. Es decir, aquellas personas que tienden a echar la culpa de los resultados negativos a otras personas, a atribuirles las consecuencias, tienden a enfadarse más y a experimentar más estados de ira.</p>
-<p>En cambio, la culpa se caracteriza por un resultado negativo que se atribuye a causas que podríamos haber controlado si nos hubiéramos esforzado y la vergüenza está asociada a resultados negativos causados por procesos que se podrían haber controlado si hubiéramos tenido mayor capacidad.</p></center></div>
-<div class="p1"><center><p>He aqui, un video con ejemplos de lo anteriormente visto:</p></center></div>
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/w6HBsGJ3fnw"title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe></iframe></center>
-<footer>
-  <center><p>este sitio fue creado por: Jacqueline Ocampo</p>
-  <p>toda copia sin autorizacion queda estrictamente prohibida</p></center>
-</footer>
-</body>
+      </li>
+      <li>
+        <a href="C:\Users\OcampoBenzel\Desktop\web\Grace Vanderwaal - Today And Tomorrow (Lyrics)(MP3_320K).mp3">
+           Today and tomorrow - Grace vanderwaal
+        </a>
+      </li>
+      <li>
+        <a href="C:\Users\OcampoBenzel\Desktop\web\Beverly(MP3_320K).mp3">
+           Beverly - Benjamin Walfisch
+        </a>
+      </li>
+      <li>
+        <a href="C:\Users\OcampoBenzel\Desktop\web\Fix you • Coldplay _ Letra en español _ inglés(MP3_320K).mp3">
+           Fix you - Coldplay
+        </a>
+      </li>
+      <li>
+        <a href="C:\Users\OcampoBenzel\Desktop\web\José González - Stay Alive(MP3_320K).mp3">
+           Stay alive - Jose Gonzalez
+        </a>
+      </li>
+      <li>
+        <a href="C:\Users\OcampoBenzel\Desktop\web\The Blue Umbrella (High Quality Musical Soundtrack) PIXAR(MP3_320K).mp3">
+           The blue Umbrella - Pixar
+        </a>
+      </li>
+     </ul>
+    </div>
+    <script type="text/javascript" src="C:\Users\OcampoBenzel\Desktop\web\music.js"></script>
+    <script type="text/javascript" src="music.js"></script>
+    <div class="p1"><center><p>Saber que nuestro pensamiento genera emociones y conocer sus mecanismos hace que tengamos una herramienta muy poderosa para poder manejarlas. Las emociones no tienen una explicación sencilla, todos percibimos el mundo a través de un filtro formado por nuestros sentidos y nuestras interpretaciones.</p>
+     <p>El proceso cognitivo es una suma de mecanismos que utilizamos los seres humanos para incorporar conocimientos. La memoria, la inteligencia, el pensamiento, la atención o el lenguaje forman parte de este proceso.</p>
+     <p>Emociones y proceso cognitivo están íntimamente ligados en una doble dirección ya que un estado emocional negativo puede influir en el proceso cognitivo y al revés, una errónea interpretación de una situación puede acarrear emociones negativas.</p>
+     <p>Imaginemos que alguien nos mira con el ceño fruncido. Podemos pensar que esa persona tiene algo contra nosotros e interpretar la mirada como algo hostil cuando puede que esté enfadada por algo totalmente ajeno que nada tiene que ver con nosotros. Hemos observado un suceso, hemos procesado e interpretado la información y hemos llegado a una conclusión. El estado emocional previo a la aparición de esta situación hace que pensemos y la interpretemos de determinada manera y también la conclusión a la que llegamos genera en nosotros una emoción que varía en función de lo que hemos interpretado.</p>
+      <ul>
+       <li>Tiene algo contra mí, quiere hacerme daño y es más fuerte que yo. La emoción que generan nuestros pensamientos es el miedo.</li>
+       <li>Tiene algo contra mí, quiere hacerme daño pero soy más alto y fuerte. La emoción que generan nuestros pensamientos es la hostilidad.</li>
+       <li>No sé por qué me mira de esa manera, parece enfadado conmigo pero voy a esperar a ver qué pasa. Generamos cierta preocupación y nos ponemos en guardia aunque sin alarmarnos demasiado.</li>
+       <li>Parece enfadado pero como no le conozco de nada es probable que no sea conmigo, a lo mejor está así siempre. En este caso la emoción generada es más bien de curiosidad.</li>
+      </ul>
+     <p>Con este ejemplo se puede ver cómo el mismo suceso puede dar lugar a emociones muy diferentes según nuestro pensamiento. Es importante pensar de manera lógica y realista y cuestionarnos en muchas ocasiones las interpretaciones que hacemos, para lograr tener pensamientos constructivos y libres de errores.</p></center>
+    </div>
+    <div class="p1"><center><p>La doble relación entre proceso cognitivo y emoción se hace aún más fuerte cuando el estado emocional es más intenso. Una persona que se pone muy nerviosa en determinada situación, puede llegar a bloquearse a nivel cognitivo. De manera inversa, interpretar una situación de manera excepcionalmente amenazante puede hacer que la persona sufra un estado grave de ansiedad.</p>
+     <p>Cuando hablamos de trastornos emocionales como los trastornos de ansiedad o las depresiones dicha relación cognición-emoción se hace aún más estrecha. Las personas con problemas de ansiedad presentan más sesgos cognitivos, es decir, interpretan las situaciones de manera más centrada en la amenaza que las personas sin estos problemas. Algo similar se observa en el caso de las emociones. Algunas personas cuando sufren una pérdida importante, especialmente las personas propensas a la depresión, tienden a interpretar los hechos negativos en términos de:</p>
+      <ul>
+       <li>Causalidad de tipo interna, es decir, la culpa la tengo yo.</li>
+       <li>Global, independiente de la situación.</li>
+       <li>Estable, que se mantiene a lo largo del tiempo.</li>
+      </ul>
+     <p>Una frase que puede resumir esta situación es por ejemplo: “Ha sido por mi culpa, como sucede con todo desde siempre”.</p></center>
+    </div>
+    <div class="p1"><center><p>Hay otros problemas emocionales derivados de lo que se llama proceso o sesgo de tipo atribucional. Es decir, aquellas personas que tienden a echar la culpa de los resultados negativos a otras personas, a atribuirles las consecuencias, tienden a enfadarse más y a experimentar más estados de ira.</p>
+     <p>En cambio, la culpa se caracteriza por un resultado negativo que se atribuye a causas que podríamos haber controlado si nos hubiéramos esforzado y la vergüenza está asociada a resultados negativos causados por procesos que se podrían haber controlado si hubiéramos tenido mayor capacidad.</p></center>
+    </div>
+    <div class="p1"><center><p>He aqui, un video con ejemplos de lo anteriormente visto:</p></center></div>
+   <center><iframe width="560" height="315" src="https://www.youtube.com/embed/w6HBsGJ3fnw"title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe></iframe></center>
+    <footer>
+     <center><p>este sitio fue creado por: Jacqueline Ocampo</p>
+     <p>toda copia sin autorizacion queda estrictamente prohibida</p></center>
+    </footer>
+  </body>
 </html>
